Uhh I did something. I guess.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1>Waddup</h1>
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+	<title>Atharva Sehgal</title>
+</head>
+<body>
+<div id="header">
+<h1><center>Atharva Sehgal</center></h1>
+</div>
+
+
+<div id="console">
+  <p class="cmd"><span class="user">atharvas@illinois</span> <span class="path">/home/atharvas</span> <span class="prompt">$</span>whoami</p>
+  <p id="infos">
+      <a href="files/cv.pdf" class="mainLink">cv</a> &dash; 
+      <a href="https://github.com/atharvas?tab=repositories" class="mainLink">github</a> &dash; <a href="mailto:atharva2@illinois.edu" class="mainLink">email</a> &dash; 
+      <a href="https://www.facebook.com/sehgal.atharva" class="mainLink">fb</a></p>
+	<p class="cmd"><span class="user">atharvas@illinois</span> <span class="path">/home/atharvas</span> <span class="prompt">$</span> ls ./projects/</p>
+	<ul id="projects">
+	<li><p class="item"><a href="https://imgur.com/gallery/W0Uef">test</a></p><p class="desc">test</p></li>
+	</ul>
+		<p class="cmd"><span class="user">atharvas@illinois</span> <span class="path">/home/atharvas</span> <span class="prompt">$</span> ls ./extra-curriculars/</p>
+	<ul id="ec">
+	<li><p class="item"><a href="https://imgur.com/gallery/W0Uef">test</a></p><p class="desc">test</p></li>
+	</ul>
+	<p class="cmd"><span class="user">atharvas@illinois</span> <span class="path">/home/atharvas</span> <span class="prompt">$</span> cat README.TXT</p>
+	<p id="infos">Click on any of the files to learn more!</p>
+	<p class="cmd"><span class="user">atharvas@illinois</span> <span class="path">/home/atharvas</span> <span class="prompt">$</span> <span id="cursor">&#9646;</span></p>
+</div>
+<!--
+ █████╗ ████████╗██╗  ██╗ █████╗ ██████╗ ██╗   ██╗ █████╗     ███████╗███████╗██╗  ██╗ ██████╗  █████╗ ██╗     
+██╔══██╗╚══██╔══╝██║  ██║██╔══██╗██╔══██╗██║   ██║██╔══██╗    ██╔════╝██╔════╝██║  ██║██╔════╝ ██╔══██╗██║     
+███████║   ██║   ███████║███████║██████╔╝██║   ██║███████║    ███████╗█████╗  ███████║██║  ███╗███████║██║     
+██╔══██║   ██║   ██╔══██║██╔══██║██╔══██╗╚██╗ ██╔╝██╔══██║    ╚════██║██╔══╝  ██╔══██║██║   ██║██╔══██║██║     
+██║  ██║   ██║   ██║  ██║██║  ██║██║  ██║ ╚████╔╝ ██║  ██║    ███████║███████╗██║  ██║╚██████╔╝██║  ██║███████╗
+╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝  ╚═══╝  ╚═╝  ╚═╝    ╚══════╝╚══════╝╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝
+                                                                                                                                 (T-Rex appears courtesy of qwantz.com)
+-->
+</body>
+</html>
+
